--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,16 +12,17 @@ tools:context=".MainActivity">
         layout="@layout/toolbarv2" />
 
 
-<LinearLayout
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:orientation="vertical"
-android:layout_below="@+id/toolbar"
-android:id="@+id/appbar">
+        <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_below="@+id/toolbar"
+        android:id="@+id/appbar">
 
 
         <LinearLayout
             android:id="@+id/search"
+            android:elevation="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/searchlayout"
@@ -82,22 +83,26 @@ android:id="@+id/appbar">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/teal_700">
+            android:background="@color/white">
+
 
             <ViewFlipper
-                android:id="@+id/viewFlipper"
+                android:id="@+id/viewFlipper1"
                 android:layout_width="match_parent"
                 android:layout_height="170dp"
-                android:autoStart="true"/>
+                android:autoStart="true">
+
+            </ViewFlipper>
 
             <ImageButton
                 android:id="@+id/btn_previous"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignStart="@id/viewFlipper"
-                android:layout_alignTop="@id/viewFlipper"
-                android:layout_alignBottom="@id/viewFlipper"
+                android:layout_alignStart="@id/viewFlipper1"
+                android:layout_alignTop="@id/viewFlipper1"
+                android:layout_alignBottom="@id/viewFlipper1"
                 android:background="@null"
+                android:padding="8dp"
                 android:src="@drawable/ic_baseline_arrow_circle_left_24"
                 android:tint="@color/teal_200" />
 
@@ -105,9 +110,10 @@ android:id="@+id/appbar">
                 android:id="@+id/btn_next"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@id/viewFlipper"
-                android:layout_alignEnd="@id/viewFlipper"
-                android:layout_alignBottom="@id/viewFlipper"
+                android:layout_alignTop="@id/viewFlipper1"
+                android:layout_alignEnd="@id/viewFlipper1"
+                android:padding="8dp"
+                android:layout_alignBottom="@id/viewFlipper1"
                 android:background="@null"
                 android:src="@drawable/slider_right_arrow"
                 android:tint="@color/teal_200" />
@@ -154,74 +160,64 @@ android:id="@+id/appbar">
         android:id="@+id/brand_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginVertical="5dp" />
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="2dp"/>
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:layout_marginTop="5dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginHorizontal="5dp"
         android:orientation="horizontal">
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="90dp"
             android:layout_weight="1"
-            android:src="@drawable/leftt" />
+            android:layout_marginHorizontal="5dp"
+            android:src="@drawable/male" />
 
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animationView"
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            app:lottie_rawRes="@raw/welcome"
+            android:layout_weight="1"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"/>
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="90dp"
+            android:layout_marginTop="5dp"
             android:layout_weight="1"
-            android:src="@drawable/leftt" />
-
-<!--        <com.airbnb.lottie.LottieAnimationView-->
-<!--            android:id="@+id/animationView"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="140dp"-->
-<!--            android:layout_gravity="center"-->
-<!--            android:layout_weight="1"-->
-<!--            app:layout_constraintDimensionRatio="1:1"-->
-<!--            app:layout_constraintWidth_percent="0.3"-->
-<!--            app:lottie_autoPlay="true"-->
-<!--            app:lottie_loop="true"-->
-<!--            app:lottie_rawRes="@raw/computing" />-->
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:layout_weight="1"
-            android:src="@drawable/rightt" />
-        <!--                <com.airbnb.lottie.LottieAnimationView-->
-        <!--                    android:id="@+id/animationView4"-->
-        <!--                    android:layout_width="match_parent"-->
-        <!--                    android:layout_height="100dp"-->
-        <!--                    android:layout_weight="1"-->
-        <!--                    app:layout_constraintDimensionRatio="1:1"-->
-        <!--                    app:layout_constraintWidth_percent="0.3"-->
-        <!--                    app:lottie_rawRes="@raw/footer"-->
-        <!--                    android:layout_gravity="center"-->
-        <!--                    app:lottie_autoPlay="true"-->
-        <!--                    app:lottie_loop="true" />-->
-        <!--                <com.airbnb.lottie.LottieAnimationView-->
-        <!--                    android:id="@+id/animationView1"-->
-        <!--                    android:layout_width="match_parent"-->
-        <!--                    android:layout_height="120dp"-->
-        <!--                    android:layout_weight="1"-->
-        <!--                    app:layout_constraintDimensionRatio="1:1"-->
-        <!--                    app:layout_constraintWidth_percent="0.3"-->
-        <!--                    app:lottie_rawRes="@raw/laptopshop"-->
-        <!--                    android:layout_gravity="center"-->
-        <!--                    app:lottie_autoPlay="true"-->
-        <!--                    app:lottie_loop="true" />-->
+            android:layout_marginHorizontal="5dp"
+            android:src="@drawable/female" />
 
     </LinearLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="25dp"
+        android:text="Top Products | Low Price | Be Quick, Be Faster"
+        android:fontFamily="@font/average_sans"
+        android:id="@+id/tag_line"
+        android:textAllCaps="true"
+        android:layout_marginVertical="5dp"
+        android:textColor="#B6B6B6"
+        android:layout_gravity="center"
+        android:textSize="14sp"/>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="12dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="2dp"
         app:cardCornerRadius="8dp">
 
         <RelativeLayout
@@ -262,29 +258,6 @@ android:id="@+id/appbar">
         </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
-
-    <!--    <TextView-->
-<!--        android:id="@+id/viewAllBrands"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="20dp"-->
-<!--        android:layout_marginHorizontal="10dp"-->
-<!--        android:layout_marginTop="3dp"-->
-<!--        android:layout_marginBottom="5dp"-->
-<!--        android:autoSizeMaxTextSize="15sp"-->
-<!--        android:autoSizeMinTextSize="8sp"-->
-<!--        android:autoSizeTextType="uniform"-->
-<!--        android:fontFamily="sans-serif-medium"-->
-<!--        android:gravity="end"-->
-<!--        android:text="View More "-->
-<!--        android:textColor="#111" />-->
-
-<!--    <ImageView-->
-<!--        android:id="@+id/Character_image_view"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="200dp"-->
-<!--        android:layout_marginHorizontal="10dp"-->
-<!--        android:scaleType="fitCenter"-->
-<!--        android:src="@drawable/white" />-->
 
 
     <TextView
