--- a/app/src/main/res/layout/toolbarv2.xml
+++ b/app/src/main/res/layout/toolbarv2.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background = "@drawable/buttonaction"
+    android:elevation="5dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 <LinearLayout
