--- a/app/src/main/res/drawable/product_view_properties.xml
+++ b/app/src/main/res/drawable/product_view_properties.xml
@@ -12,7 +12,7 @@
         />
     <gradient
         android:startColor="@color/teal_200"
-        android:endColor="@color/white"
+        android:endColor="@color/teal_200"
         android:angle="270"/>
 
 </shape>
