--- a/app/src/main/res/layout/activity_all_category.xml
+++ b/app/src/main/res/layout/activity_all_category.xml
@@ -35,12 +35,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:fontFamily="sans-serif-medium"
+        android:fontFamily="@font/average_sans"
         android:gravity="center"
         android:layout_marginStart="5dp"
-        android:text="Choose Your Category"
-        android:textSize="20sp"
-        android:textColor="@color/black"/>
+        android:text="The Category We Have"
+        android:textSize="18sp"
+        android:textColor="#8C8C8C"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/all_category_recyclerView"
