--- a/app/src/main/res/layout/activity_favorite_products.xml
+++ b/app/src/main/res/layout/activity_favorite_products.xml
@@ -32,11 +32,11 @@
 
         <TextView
             android:id="@+id/categoryNameView"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:fontFamily="@font/average_sans"
-            android:gravity="start"
+            android:gravity="center"
             android:layout_marginStart="5dp"
             android:text="All your Favorites are here..."
             android:layout_marginBottom="10dp"
