--- a/app/src/main/res/layout/activity_product_description.xml
+++ b/app/src/main/res/layout/activity_product_description.xml
@@ -56,6 +56,7 @@
                 <FrameLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:layout_alignBottom="@id/product_Image_detail"
                     android:layout_alignEnd="@id/product_Image_detail">
 
@@ -63,7 +64,7 @@
                     <View
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:elevation="5dp"
+                        android:elevation="2dp"
                         android:background="@drawable/circular_background" /> <!-- Set a drawable for circular shape -->
 
                     <!-- Favorite Button -->
@@ -80,133 +81,140 @@
 
             </RelativeLayout>
 
-            <LinearLayout
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/product_property_recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginVertical="5dp"
-                android:background="@drawable/product_view_price"
-                android:padding="8dp"
-                android:orientation="horizontal">
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="2dp"/>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="2dp"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginVertical="5dp"-->
+<!--                android:background="@drawable/product_view_price"-->
+<!--                android:padding="8dp"-->
+<!--                android:orientation="horizontal">-->
 
-                    <TextView
-                        android:id="@+id/text_view_product_price_brand_amazon"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/average_sans"
-                        android:text="Amazon"
-                        android:textColor="#A8A8A8"
-                        android:textSize="18sp" />
+<!--                <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginVertical="2dp"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:orientation="vertical">-->
 
-                    <TextView
-                        android:id="@+id/text_view_product_price_amazon"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/average_sans"
-                        android:text="MRP ₹ 9,999"
-                        android:textColor="#111"
-                        android:textSize="18sp" />
+<!--                    <TextView-->
+<!--                        android:id="@+id/text_view_product_price_brand_amazon"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:fontFamily="@font/average_sans"-->
+<!--                        android:text="Amazon"-->
+<!--                        android:textColor="#A8A8A8"-->
+<!--                        android:textSize="18sp" />-->
 
-                </LinearLayout>
+<!--                    <TextView-->
+<!--                        android:id="@+id/text_view_product_price_amazon"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:fontFamily="@font/average_sans"-->
+<!--                        android:text="MRP ₹ 9,999"-->
+<!--                        android:textColor="#111"-->
+<!--                        android:textSize="18sp" />-->
 
-                <Button
-                    android:id="@+id/buyProduct_amazon"
-                    android:layout_width="100dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center_vertical"
-                    android:text="Buy Now"
-                    android:fontFamily="@font/average_sans"
-                    android:textSize="16dp"
-                    android:textStyle="bold"
-                    android:elevation="5dp"
-                    android:textAllCaps="false"
-                    android:background="@drawable/button_buy_now"/>
-                <ImageView
-                    android:id="@+id/shareProduct_amazon"
-                    android:layout_width="40dp"
-                    android:layout_marginHorizontal="2dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center_vertical"
-                    android:background="@drawable/share_background"
-                    android:elevation="5dp"
-                    android:padding="8dp"
-                    android:src="@drawable/ic_baseline_share_24"
-                    app:tint="@color/colorPrimary" />
+<!--                </LinearLayout>-->
 
-            </LinearLayout>
+<!--                <Button-->
+<!--                    android:id="@+id/buyProduct_amazon"-->
+<!--                    android:layout_width="100dp"-->
+<!--                    android:layout_height="40dp"-->
+<!--                    android:layout_gravity="center_vertical"-->
+<!--                    android:text="Buy Now"-->
+<!--                    android:fontFamily="@font/average_sans"-->
+<!--                    android:textSize="16dp"-->
+<!--                    android:textStyle="bold"-->
+<!--                    android:elevation="5dp"-->
+<!--                    android:textAllCaps="false"-->
+<!--                    android:background="@drawable/button_buy_now"/>-->
+<!--                <ImageView-->
+<!--                    android:id="@+id/shareProduct_amazon"-->
+<!--                    android:layout_width="40dp"-->
+<!--                    android:layout_marginHorizontal="2dp"-->
+<!--                    android:layout_height="40dp"-->
+<!--                    android:layout_gravity="center_vertical"-->
+<!--                    android:background="@drawable/share_background"-->
+<!--                    android:elevation="5dp"-->
+<!--                    android:padding="8dp"-->
+<!--                    android:src="@drawable/ic_baseline_share_24"-->
+<!--                    app:tint="@color/colorPrimary" />-->
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="5dp"
-                android:background="@drawable/product_view_price"
-                android:padding="8dp"
-                android:orientation="horizontal">
+<!--            </LinearLayout>-->
 
-                <LinearLayout
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginVertical="5dp"-->
+<!--                android:background="@drawable/product_view_price"-->
+<!--                android:padding="8dp"-->
+<!--                android:orientation="horizontal">-->
 
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="2dp"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
+<!--                <LinearLayout-->
 
-                    <TextView
-                        android:id="@+id/text_view_product_price_brand"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/average_sans"
-                        android:text="boAt"
-                        android:textColor="#A8A8A8"
-                        android:textSize="18sp" />
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginVertical="2dp"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:orientation="vertical">-->
 
-                    <TextView
-                        android:id="@+id/text_view_product_price"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/average_sans"
-                        android:text="MRP ₹ 7,999"
-                        android:textColor="#111"
-                        android:textSize="18sp" />
+<!--                    <TextView-->
+<!--                        android:id="@+id/text_view_product_price_brand"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:fontFamily="@font/average_sans"-->
+<!--                        android:text="boAt"-->
+<!--                        android:textColor="#A8A8A8"-->
+<!--                        android:textSize="18sp" />-->
 
-                </LinearLayout>
+<!--                    <TextView-->
+<!--                        android:id="@+id/text_view_product_price"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:fontFamily="@font/average_sans"-->
+<!--                        android:text="MRP ₹ 7,999"-->
+<!--                        android:textColor="#111"-->
+<!--                        android:textSize="18sp" />-->
 
-                <Button
-                    android:id="@+id/buyProduct_brand"
-                    android:layout_width="100dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center_vertical"
-                    android:text="Buy Now"
-                    android:fontFamily="@font/average_sans"
-                    android:textSize="16dp"
-                    android:elevation="5dp"
-                    android:textStyle="bold"
-                    android:textAllCaps="false"
-                    android:background="@drawable/button_buy_now"/>
+<!--                </LinearLayout>-->
 
-                <ImageView
-                    android:id="@+id/shareOtherBrandProduct"
-                    android:layout_width="40dp"
-                    android:layout_marginHorizontal="2dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center_vertical"
-                    android:background="@drawable/share_background"
-                    android:elevation="5dp"
-                    android:padding="8dp"
-                    android:src="@drawable/ic_baseline_share_24"
-                    app:tint="@color/colorPrimary" />
+<!--                <Button-->
+<!--                    android:id="@+id/buyProduct_brand"-->
+<!--                    android:layout_width="100dp"-->
+<!--                    android:layout_height="40dp"-->
+<!--                    android:layout_gravity="center_vertical"-->
+<!--                    android:text="Buy Now"-->
+<!--                    android:fontFamily="@font/average_sans"-->
+<!--                    android:textSize="16dp"-->
+<!--                    android:elevation="5dp"-->
+<!--                    android:textStyle="bold"-->
+<!--                    android:textAllCaps="false"-->
+<!--                    android:background="@drawable/button_buy_now"/>-->
 
-            </LinearLayout>
+<!--                <ImageView-->
+<!--                    android:id="@+id/shareOtherBrandProduct"-->
+<!--                    android:layout_width="40dp"-->
+<!--                    android:layout_marginHorizontal="2dp"-->
+<!--                    android:layout_height="40dp"-->
+<!--                    android:layout_gravity="center_vertical"-->
+<!--                    android:background="@drawable/share_background"-->
+<!--                    android:elevation="5dp"-->
+<!--                    android:padding="8dp"-->
+<!--                    android:src="@drawable/ic_baseline_share_24"-->
+<!--                    app:tint="@color/colorPrimary" />-->
+
+<!--            </LinearLayout>-->
 
             <TextView
                 android:id="@+id/disclaimer"
@@ -241,7 +249,7 @@
                     android:fontFamily="@font/average_sans"
                     android:text="4.5 ★"
                     android:layout_weight="1"
-                    android:textColor="@color/colorAccent"
+                    android:textColor="@color/white"
                     android:textSize="22sp"/>
 
                 <TextView
@@ -252,7 +260,7 @@
                     android:fontFamily="@font/average_sans"
                     android:gravity="center"
                     android:text="boAt"
-                    android:textColor="#000000"
+                    android:textColor="@color/white"
                     android:textSize="22sp"/>
 
                 <LinearLayout
@@ -271,7 +279,7 @@
                         android:fontFamily="@font/average_sans"
                         android:gravity="end"
                         android:text="55.6k+"
-                        android:textColor="@color/black"
+                        android:textColor="@color/white"
                         android:textSize="18sp" />
 
                     <ImageView
