--- a/app/src/main/res/layout/activity_search_product.xml
+++ b/app/src/main/res/layout/activity_search_product.xml
@@ -11,11 +11,19 @@
         android:id="@+id/toolbar"
         layout="@layout/all_toolbar" />
 
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar"
+        android:id="@+id/scrollContainer"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_below="@id/toolbar">
+        android:layout_marginVertical="5dp">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/search_product_recyclerView"
@@ -24,6 +32,8 @@
             android:layout_height="match_parent"/>
 
     </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
 
 
 
