--- a/app/src/main/res/layout/all_toolbar.xml
+++ b/app/src/main/res/layout/all_toolbar.xml
@@ -19,7 +19,7 @@
         android:text="ShopiQuik"
         android:id="@+id/appBarTitle"
         android:layout_gravity="center_vertical"
-        android:textColor="#111"
+        android:textColor="#FFF"
         android:textSize="35dp" />
 
 
@@ -43,6 +43,7 @@
         android:textSize="16sp"
         android:layout_margin="0dp"
         android:padding="0dp"
+        android:visibility="gone"
         android:textColor="@color/white"
         android:layout_marginLeft="0dp"/>
 
