--- a/app/src/main/res/layout/more_toolbar.xml
+++ b/app/src/main/res/layout/more_toolbar.xml
@@ -19,7 +19,7 @@
         android:text="ShopiQuik"
         android:id="@+id/appBarTitle"
         android:layout_gravity="center_vertical"
-        android:textColor="#111"
+        android:textColor="#FFF"
         android:textSize="35dp" />
 
 
