--- a/app/src/main/res/layout/toolbarv2.xml
+++ b/app/src/main/res/layout/toolbarv2.xml
@@ -2,7 +2,7 @@
 <androidx.appcompat.widget.Toolbar android:layout_height="60dp"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background = "@drawable/buttonaction"
+    android:background = "@drawable/button_action_main_nav"
     android:elevation="5dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
@@ -10,6 +10,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
+
+    <ImageView
+        android:id="@+id/remove_Icon"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_gravity="center_vertical"
+        android:background="@color/transparent"
+        android:elevation="5dp"
+        android:padding="5dp"
+        android:visibility="gone"
+        android:src="@drawable/cancel"
+        app:tint="@color/white" />
 
 
     <TextView
@@ -20,8 +32,64 @@
         android:text="ShopiQuik"
         android:id="@+id/appBarTitle"
         android:layout_gravity="center_vertical"
-        android:textColor="#111"
+        android:textColor="#FFF"
         android:textSize="35dp" />
+
+
+<!--    <androidx.appcompat.widget.SearchView-->
+<!--        android:layout_margin="2dp"-->
+<!--        android:id="@+id/search_view"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:iconifiedByDefault="false"-->
+<!--        android:layout_weight="1"-->
+<!--        android:background="@drawable/searchbar"-->
+<!--        app:queryHint="Search..." />-->
+
+    <LinearLayout
+        android:id="@+id/searchLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@color/teal_200"
+        android:orientation="horizontal"
+        android:visibility="gone"
+        android:layout_marginEnd="15dp"
+        android:paddingHorizontal="5dp"
+        android:paddingVertical="5dp">
+
+
+        <EditText
+            android:id="@+id/searchInput"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:elevation="5dp"
+            android:background="@drawable/searchbar"
+            android:fontFamily="@font/average_sans"
+            android:hint="  Search Product..."
+            android:textColorHint="@color/teal_200"
+            android:imeOptions="actionSearch"
+            android:inputType="text|textCapSentences"
+            android:lines="1"
+            android:textColor="@color/black"
+            android:maxLines="1"
+            android:paddingHorizontal="5dp"
+            android:textStyle="normal" />
+
+        <ImageButton
+            android:id="@+id/searchProduct"
+            android:layout_width="80dp"
+            android:layout_height="40dp"
+            android:elevation="5dp"
+            android:layout_gravity="end"
+            android:layout_weight="1"
+            android:background="@drawable/searchiconback"
+            android:src="@drawable/ic_baseline_search_24" />
+
+    </LinearLayout>
+
 
     <ImageView
         android:id="@+id/fav_Icon"
@@ -41,6 +109,7 @@
         android:text="9+"
         android:textSize="16sp"
         android:layout_margin="0dp"
+        android:visibility="gone"
         android:padding="0dp"
         android:textColor="@color/white"
         android:layout_marginLeft="0dp"/>
@@ -53,11 +122,20 @@
         android:background="@color/transparent"
         android:elevation="5dp"
         android:padding="5dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="5dp"
         android:src="@drawable/ic_outline_dashboard_24"
         app:tint="@color/white" />
 
+    <ImageView
+        android:id="@+id/search_Icon"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_gravity="center_vertical"
+        android:background="@color/transparent"
+        android:elevation="5dp"
+        android:padding="5dp"
+        android:layout_marginEnd="10dp"
+        android:src="@drawable/ic_baseline_search_24"
+        app:tint="@color/white" />
 <!--    <ImageView-->
 <!--        android:id="@+id/homeIcon"-->
 <!--        android:layout_width="35dp"-->
