--- a/app/src/main/res/layout/activity_favorite_products.xml
+++ b/app/src/main/res/layout/activity_favorite_products.xml
@@ -20,15 +20,48 @@
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/appbar"
             android:paddingLeft="5dp"
             android:paddingRight="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_below="@id/toolbar">
+        android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                android:id="@+id/emptyCartContainer"
+                android:orientation="vertical">
+
+
+            <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animationView1"
+            android:layout_width="220dp"
+            android:layout_height="220dp"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintWidth_percent="0.3"
+            app:lottie_rawRes="@raw/empty_cart"
+            android:layout_gravity="center_horizontal"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true" />
+
+                <TextView
+                    android:id="@+id/emptyText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/average_sans"
+                    android:gravity="center"
+                    android:layout_marginStart="5dp"
+                    android:text="Your Favorite is Empty..."
+                    android:layout_marginBottom="10dp"
+                    android:textSize="18sp"
+                    android:textColor="#8C8C8C"/>
+
+            </LinearLayout>
+
 
         <TextView
             android:id="@+id/categoryNameView"
