--- a/app/src/main/res/layout/activity_product_description.xml
+++ b/app/src/main/res/layout/activity_product_description.xml
@@ -17,11 +17,16 @@
         android:layout_height="match_parent"
         android:layout_below="@id/toolbar">
 
-    <ScrollView
-        android:id="@+id/scrollViewMain"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="none">
+<!--    <ScrollView-->
+<!--        android:id="@+id/scrollViewMain"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:scrollbars="none">-->
+
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/scrollViewMain">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -88,134 +93,6 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="2dp"/>
 
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginVertical="5dp"-->
-<!--                android:background="@drawable/product_view_price"-->
-<!--                android:padding="8dp"-->
-<!--                android:orientation="horizontal">-->
-
-<!--                <LinearLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginVertical="2dp"-->
-<!--                    android:layout_weight="1"-->
-<!--                    android:orientation="vertical">-->
-
-<!--                    <TextView-->
-<!--                        android:id="@+id/text_view_product_price_brand_amazon"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_weight="1"-->
-<!--                        android:fontFamily="@font/average_sans"-->
-<!--                        android:text="Amazon"-->
-<!--                        android:textColor="#A8A8A8"-->
-<!--                        android:textSize="18sp" />-->
-
-<!--                    <TextView-->
-<!--                        android:id="@+id/text_view_product_price_amazon"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_weight="1"-->
-<!--                        android:fontFamily="@font/average_sans"-->
-<!--                        android:text="MRP ₹ 9,999"-->
-<!--                        android:textColor="#111"-->
-<!--                        android:textSize="18sp" />-->
-
-<!--                </LinearLayout>-->
-
-<!--                <Button-->
-<!--                    android:id="@+id/buyProduct_amazon"-->
-<!--                    android:layout_width="100dp"-->
-<!--                    android:layout_height="40dp"-->
-<!--                    android:layout_gravity="center_vertical"-->
-<!--                    android:text="Buy Now"-->
-<!--                    android:fontFamily="@font/average_sans"-->
-<!--                    android:textSize="16dp"-->
-<!--                    android:textStyle="bold"-->
-<!--                    android:elevation="5dp"-->
-<!--                    android:textAllCaps="false"-->
-<!--                    android:background="@drawable/button_buy_now"/>-->
-<!--                <ImageView-->
-<!--                    android:id="@+id/shareProduct_amazon"-->
-<!--                    android:layout_width="40dp"-->
-<!--                    android:layout_marginHorizontal="2dp"-->
-<!--                    android:layout_height="40dp"-->
-<!--                    android:layout_gravity="center_vertical"-->
-<!--                    android:background="@drawable/share_background"-->
-<!--                    android:elevation="5dp"-->
-<!--                    android:padding="8dp"-->
-<!--                    android:src="@drawable/ic_baseline_share_24"-->
-<!--                    app:tint="@color/colorPrimary" />-->
-
-<!--            </LinearLayout>-->
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginVertical="5dp"-->
-<!--                android:background="@drawable/product_view_price"-->
-<!--                android:padding="8dp"-->
-<!--                android:orientation="horizontal">-->
-
-<!--                <LinearLayout-->
-
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginVertical="2dp"-->
-<!--                    android:layout_weight="1"-->
-<!--                    android:orientation="vertical">-->
-
-<!--                    <TextView-->
-<!--                        android:id="@+id/text_view_product_price_brand"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_weight="1"-->
-<!--                        android:fontFamily="@font/average_sans"-->
-<!--                        android:text="boAt"-->
-<!--                        android:textColor="#A8A8A8"-->
-<!--                        android:textSize="18sp" />-->
-
-<!--                    <TextView-->
-<!--                        android:id="@+id/text_view_product_price"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_weight="1"-->
-<!--                        android:fontFamily="@font/average_sans"-->
-<!--                        android:text="MRP ₹ 7,999"-->
-<!--                        android:textColor="#111"-->
-<!--                        android:textSize="18sp" />-->
-
-<!--                </LinearLayout>-->
-
-<!--                <Button-->
-<!--                    android:id="@+id/buyProduct_brand"-->
-<!--                    android:layout_width="100dp"-->
-<!--                    android:layout_height="40dp"-->
-<!--                    android:layout_gravity="center_vertical"-->
-<!--                    android:text="Buy Now"-->
-<!--                    android:fontFamily="@font/average_sans"-->
-<!--                    android:textSize="16dp"-->
-<!--                    android:elevation="5dp"-->
-<!--                    android:textStyle="bold"-->
-<!--                    android:textAllCaps="false"-->
-<!--                    android:background="@drawable/button_buy_now"/>-->
-
-<!--                <ImageView-->
-<!--                    android:id="@+id/shareOtherBrandProduct"-->
-<!--                    android:layout_width="40dp"-->
-<!--                    android:layout_marginHorizontal="2dp"-->
-<!--                    android:layout_height="40dp"-->
-<!--                    android:layout_gravity="center_vertical"-->
-<!--                    android:background="@drawable/share_background"-->
-<!--                    android:elevation="5dp"-->
-<!--                    android:padding="8dp"-->
-<!--                    android:src="@drawable/ic_baseline_share_24"-->
-<!--                    app:tint="@color/colorPrimary" />-->
-
-<!--            </LinearLayout>-->
-
             <TextView
                 android:id="@+id/disclaimer"
                 android:layout_width="match_parent"
@@ -250,7 +127,11 @@
                     android:text="4.5 ★"
                     android:layout_weight="1"
                     android:textColor="@color/white"
-                    android:textSize="22sp"/>
+                    android:autoSizeTextType="uniform"
+                    android:autoSizeMinTextSize="12sp"
+                    android:autoSizeMaxTextSize="22sp"
+                    android:autoSizeStepGranularity="2sp"
+                    />
 
                 <TextView
                     android:id="@+id/text_view_productBrand"
@@ -261,7 +142,11 @@
                     android:gravity="center"
                     android:text="boAt"
                     android:textColor="@color/white"
-                    android:textSize="22sp"/>
+                    android:autoSizeTextType="uniform"
+                    android:autoSizeMinTextSize="12sp"
+                    android:autoSizeMaxTextSize="22sp"
+                    android:autoSizeStepGranularity="2sp"
+                    />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -280,12 +165,15 @@
                         android:gravity="end"
                         android:text="55.6k+"
                         android:textColor="@color/white"
-                        android:textSize="18sp" />
+                        android:autoSizeTextType="uniform"
+                        android:autoSizeMinTextSize="12sp"
+                        android:autoSizeMaxTextSize="22sp"
+                        android:autoSizeStepGranularity="2sp" />
 
                     <ImageView
                         android:id="@+id/like"
-                        android:layout_width="70dp"
-                        android:layout_height="80dp"
+                        android:layout_width="50dp"
+                        android:layout_height="60dp"
                         android:layout_gravity="center_vertical"
                         android:layout_marginHorizontal="5dp"
                         android:layout_weight="1"
@@ -321,6 +209,17 @@
                 android:text="During barbeque evenings, it's not just the stove that's lit! The aromatic smoke in the air mixes perfectly with the chuckles and snorty laughs we only dare to bring out in front of our loved ones. Our chefs have perfected the same barbeque taste in a revolutionary new form, presenting BBQ Cashews."
                 android:textColor="@color/black"
                 android:textSize="16sp" />
+            <Button
+                android:id="@+id/btn_view_more"
+                android:background="@drawable/button_view_more"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:padding="5dp"
+                android:text="View More"
+                android:textSize="12sp"
+                android:textColor="#111"
+                android:textAllCaps="false"
+                android:visibility="visible" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -350,8 +249,9 @@
 
         </LinearLayout>
 
+        </androidx.core.widget.NestedScrollView>
 
-    </ScrollView>
+<!--    </ScrollView>-->
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
