--- a/app/src/main/res/layout/activity_more.xml
+++ b/app/src/main/res/layout/activity_more.xml
@@ -28,7 +28,7 @@
             android:layout_marginBottom="30dp"
             android:fontFamily="@font/average_sans"
             android:gravity="center"
-            android:text="ShopiQuik, Be Quick, Be Faster"
+            android:text="ShopiQuik, Shopping Made Easy!"
             android:textColor="@color/teal_200"
             android:textSize="14dp" />
 
@@ -152,6 +152,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
+            android:visibility = "gone"
             android:id="@+id/allProductLayout"
             android:orientation="horizontal">
 
@@ -167,12 +168,14 @@
                 android:fontFamily="@font/average_sans"
                 android:text="View All Products"
                 android:textColor="@color/black"
+                android:visibility = "gone"
                 android:textSize="16sp" />
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
+            android:visibility = "gone"
             android:layout_marginVertical="15dp"
             android:background="#DCDCDC" />
 
@@ -330,10 +333,15 @@
                 android:textColor="@color/black"
                 android:textSize="16sp" />
         </LinearLayout>
-
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animationView"
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            app:lottie_rawRes="@raw/timpass"
+            android:layout_weight="1"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"/>
     </LinearLayout>
-
-
 
 
 </RelativeLayout>
