--- a/app/src/main/res/layout/fav_toolbar.xml
+++ b/app/src/main/res/layout/fav_toolbar.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:fontFamily="@font/aref_ruqaa_bold"
+        android:fontFamily="@font/battambang"
         android:text="ShopiQuik"
         android:id="@+id/appBarTitle"
         android:layout_gravity="center_vertical"
