--- a/app/src/main/res/layout/home_brand_card.xml
+++ b/app/src/main/res/layout/home_brand_card.xml
@@ -6,66 +6,57 @@
     android:paddingVertical="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<!--    <androidx.cardview.widget.CardView-->
-<!--        android:layout_width="115dp"-->
-<!--        android:layout_height="85dp"-->
-<!--        app:cardCornerRadius="5dp"-->
-<!--        app:cardMaxElevation="0dp"-->
-<!--        app:cardElevation="0dp">-->
+    <RelativeLayout
+        android:layout_width="115dp"
+        android:layout_height="85dp"
+        android:background="@drawable/newcardback">
 
-        <RelativeLayout
-            android:layout_width="115dp"
-            android:background="@drawable/newcardback"
-            android:layout_height="85dp">
+        <androidx.cardview.widget.CardView
+            android:id="@+id/photocard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="5dp"
+            android:layout_marginTop="5dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="5dp"
+            android:elevation="2dp">
 
-            <androidx.cardview.widget.CardView
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/photocard"
-                android:layout_marginHorizontal="5dp"
-                android:layout_marginTop="5dp"
-                app:cardBackgroundColor="@color/white"
-                app:cardCornerRadius="5dp"
-                android:elevation="2dp">
+                android:layout_height="wrap_content">
 
                 <ImageView
                     android:id="@+id/Character_image_view"
                     android:layout_width="wrap_content"
                     android:layout_height="75dp"
+                    android:layout_centerInParent="true"
                     android:scaleType="fitCenter"
-                    android:layout_centerHorizontal="true"
                     android:src="@drawable/white" />
 
-                <!--                <ImageView-->
-                <!--                    android:id="@+id/Character_image_view"-->
-                <!--                    android:layout_width="wrap_content"-->
-                <!--                    android:layout_height="120dp"-->
-                <!--                    android:scaleType="fitXY"-->
-                <!--                    android:layout_centerHorizontal="true"-->
-                <!--                    android:src="@drawable/white" />-->
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
 
-            </androidx.cardview.widget.CardView>
+        <TextView
+            android:id="@+id/characterName"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_below="@id/photocard"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="5dp"
+            android:autoSizeMaxTextSize="15sp"
+            android:autoSizeMinTextSize="8sp"
+            android:autoSizeTextType="uniform"
+            android:fontFamily="@font/aldrich"
+            android:gravity="center"
+            android:text="Brand"
+            android:textColor="#111"
+            android:textStyle="bold"
+            android:visibility="gone" />
 
-            <TextView
-                android:id="@+id/characterName"
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:layout_below="@+id/photocard"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="3dp"
-                android:layout_marginBottom="5dp"
-                android:autoSizeMaxTextSize="15sp"
-                android:autoSizeMinTextSize="8sp"
-                android:autoSizeTextType="uniform"
-                android:fontFamily="@font/aldrich"
-                android:gravity="center"
-                android:text="Brand"
-                android:textColor="#111"
-                android:textStyle="bold"
-                android:visibility="gone" />
+    </RelativeLayout>
 
-        </RelativeLayout>
-<!--    </androidx.cardview.widget.CardView>-->
+
 
 
 </RelativeLayout>
