--- a/app/src/main/res/layout/product_card.xml
+++ b/app/src/main/res/layout/product_card.xml
@@ -57,28 +57,35 @@
             android:layout_below="@id/product_image"
             android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginBottom="2dp"
+            android:orientation="horizontal">
             <!-- Product Title -->
             <TextView
                 android:id="@+id/product_title"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/average_sans"
-                android:layout_below="@id/product_image"
                 android:layout_marginTop="4dp"
+                android:layout_weight="1"
+                android:paddingBottom="2dp"
                 android:text="Apple 6ZX Watch"
                 android:textColor="@android:color/black"
-                android:textSize="16sp" />
+                android:textSize="14sp" />
 
-            <!-- Price -->
             <TextView
-                android:id="@+id/product_price"
+                android:id="@+id/product_rating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:text="₹ 60,780"
-                android:textColor="@android:color/black"
-                android:textSize="16sp"
-                android:visibility="gone" />
+                android:text="1 ★"
+                android:layout_marginTop="4dp"
+                android:fontFamily="@font/average_sans"
+                android:textColor="@color/colorAccent"
+                android:textSize="12sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/product_desc"
@@ -90,6 +97,7 @@
                 android:textSize="13sp"
                 android:visibility="gone" />
 
+        </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -107,17 +115,19 @@
                     android:fontFamily="@font/average_sans"
                     android:text="Apple"
                     android:textColor="#737373"
-                    android:textSize="14sp" />
+                    android:textStyle="bold"
+                    android:textSize="12sp" />
 
+                <!-- Price -->
                 <TextView
-                    android:id="@+id/product_rating"
+                    android:id="@+id/product_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="1 ★"
-                    android:fontFamily="@font/average_sans"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:layout_marginEnd="0dp"
+                    android:text="₹ 60,780"
+                    android:textStyle="bold"
+                    android:textColor="@android:color/black"
+                    android:textSize="12sp"/>
 
             </LinearLayout>
 
