--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/abeezee</item>
         <item>@font/aldrich</item>
+        <item>@font/archivo_thin</item>
         <item>@font/aref_ruqaa_bold</item>
         <item>@font/average_sans</item>
         <item>@font/montserrat_subrayada</item>
