--- a/app/src/main/res/layout/home_brand_card.xml
+++ b/app/src/main/res/layout/home_brand_card.xml
@@ -29,6 +29,7 @@
                     android:id="@+id/Character_image_view"
                     android:layout_width="wrap_content"
                     android:layout_height="75dp"
+                    android:padding="5dp"
                     android:layout_centerInParent="true"
                     android:scaleType="fitCenter"
                     android:src="@drawable/white" />
